--- a/nicepage.css
+++ b/nicepage.css
@@ -33800,175 +33800,7 @@ a.u-link.u-text-hover-grey-90:hover {
 
 /*begin-variables sitestylecss*/
 
-.u-custom-color-1,
-        .u-body.u-custom-color-1,
-        .u-container-style.u-custom-color-1:before,
-        .u-table-alt-custom-color-1 tr:nth-child(even)
-        {
-            color: #111111;
-            background-color: #b9ef39;
-        }
 
-        .u-button-style.u-custom-color-1,
-        .u-button-style.u-custom-color-1[class*="u-border-"]
-        {
-            color: #111111 !important;
-            background-color: #b9ef39 !important;
-        }
-
-        .u-button-style.u-custom-color-1:hover,
-        .u-button-style.u-custom-color-1[class*="u-border-"]:hover,
-        .u-button-style.u-custom-color-1:focus,
-        .u-button-style.u-custom-color-1[class*="u-border-"]:focus,
-        .u-button-style.u-button-style.u-custom-color-1:active,
-        .u-button-style.u-button-style.u-custom-color-1[class*="u-border-"]:active,
-        .u-button-style.u-button-style.u-custom-color-1.active,
-        .u-button-style.u-button-style.u-custom-color-1[class*="u-border-"].active,
-        li.active > .u-button-style.u-button-style.u-custom-color-1,
-        li.active > .u-button-style.u-button-style.u-custom-color-1[class*="u-border-"]
-        {
-            color: #111111 !important;
-            background-color: #afed1e !important;
-        }
-
-        .u-hover-custom-color-1:hover,
-        .u-hover-custom-color-1[class*="u-border-"]:hover,
-        .u-hover-custom-color-1:focus,
-        .u-hover-custom-color-1[class*="u-border-"]:focus,
-        .u-active-custom-color-1.u-active.u-active,
-        .u-active-custom-color-1[class*="u-border-"].u-active.u-active,
-        a.u-button-style.u-hover-custom-color-1:hover,
-        a.u-button-style.u-hover-custom-color-1[class*="u-border-"]:hover,
-        a.u-button-style:hover > .u-hover-custom-color-1,
-        a.u-button-style:hover > .u-hover-custom-color-1[class*="u-border-"],
-        a.u-button-style.u-hover-custom-color-1:focus,
-        a.u-button-style.u-hover-custom-color-1[class*="u-border-"]:focus,
-        a.u-button-style.u-button-style.u-active-custom-color-1:active,
-        a.u-button-style.u-button-style.u-active-custom-color-1[class*="u-border-"]:active,
-        a.u-button-style.u-button-style.u-active-custom-color-1.active,
-        a.u-button-style.u-button-style.u-active-custom-color-1[class*="u-border-"].active,
-        a.u-button-style.u-button-style.active > .u-active-custom-color-1,
-        a.u-button-style.u-button-style.active > .u-active-custom-color-1[class*="u-border-"],
-        li.active > a.u-button-style.u-button-style.u-active-custom-color-1,
-        li.active > a.u-button-style.u-button-style.u-active-custom-color-1[class*="u-border-"]
-        {
-            color: #111111 !important;
-            background-color: #b9ef39 !important;
-        }
-
-        a.u-link.u-hover-custom-color-1:hover {
-            color: #b9ef39 !important;
-        }
-
-        
-
-        
-        .u-border-custom-color-1,
-        .u-separator-custom-color-1:after
-        {
-            border-color: #b9ef39;
-            stroke: #b9ef39;
-        }
-
-        .u-button-style.u-border-custom-color-1
-        {
-            border-color: #b9ef39 !important;
-            color: #b9ef39 !important;
-            background-color: transparent !important;
-        }
-
-        .u-button-style.u-border-custom-color-1:hover,
-        .u-button-style.u-border-custom-color-1:focus
-        {
-            border-color: transparent !important;
-            color: #afed1e !important;
-            background-color: transparent !important;
-        }
-
-        .u-border-hover-custom-color-1:hover,
-        .u-border-hover-custom-color-1:focus,
-        .u-border-active-custom-color-1.u-active.u-active,
-        a.u-button-style.u-border-hover-custom-color-1:hover,
-        a.u-button-style:hover > .u-border-hover-custom-color-1,
-        a.u-button-style.u-border-hover-custom-color-1:focus,
-        a.u-button-style.u-button-style.u-border-active-custom-color-1:active,
-        a.u-button-style.u-button-style.u-border-active-custom-color-1.active,
-        a.u-button-style.u-button-style.active > .u-border-active-custom-color-1,
-        li.active > a.u-button-style.u-button-style.u-border-active-custom-color-1
-        {
-            color: #b9ef39 !important;
-            border-color: #b9ef39 !important;
-        }
-
-        .u-link.u-border-custom-color-1[class*="u-border-"]
-        {
-            border-color: #b9ef39 !important;
-        }
-
-        .u-link.u-border-custom-color-1[class*="u-border-"]:hover
-        {
-            border-color: #afed1e !important;
-        }
-        
-
-        
-        .u-text-custom-color-1,
-        a.u-button-style.u-text-custom-color-1,
-        a.u-button-style.u-text-custom-color-1[class*="u-border-"]
-        {
-            color: #b9ef39 !important;
-        }
-
-        a.u-button-style.u-text-custom-color-1:hover,
-        a.u-button-style.u-text-custom-color-1[class*="u-border-"]:hover,
-        a.u-button-style.u-text-custom-color-1:focus,
-        a.u-button-style.u-text-custom-color-1[class*="u-border-"]:focus,
-        a.u-button-style.u-button-style.u-text-custom-color-1:active,
-        a.u-button-style.u-button-style.u-text-custom-color-1[class*="u-border-"]:active,
-        a.u-button-style.u-button-style.u-text-custom-color-1.active,
-        a.u-button-style.u-button-style.u-text-custom-color-1[class*="u-border-"].active
-        {
-            color: #afed1e !important;
-        }
-
-        a.u-button-style:hover > .u-text-hover-custom-color-1,
-        a.u-button-style:hover > .u-text-hover-custom-color-1[class*="u-border-"],
-        a.u-button-style.u-button-style.u-text-hover-custom-color-1:hover,
-        a.u-button-style.u-button-style.u-text-hover-custom-color-1[class*="u-border-"]:hover,
-        a.u-button-style.u-button-style.u-text-hover-custom-color-1:focus,
-        a.u-button-style.u-button-style.u-text-hover-custom-color-1[class*="u-border-"]:focus,
-        a.u-button-style.u-button-style.u-button-style.u-text-active-custom-color-1:active,
-        a.u-button-style.u-button-style.u-button-style.u-text-active-custom-color-1[class*="u-border-"]:active,
-        a.u-button-style.u-button-style.u-button-style.u-text-active-custom-color-1.active,
-        a.u-button-style.u-button-style.u-button-style.u-text-active-custom-color-1[class*="u-border-"].active,
-        a.u-button-style.u-button-style.active > .u-text-active-custom-color-1,
-        a.u-button-style.u-button-style.active > .u-text-active-custom-color-1[class*="u-border-"],
-        :not(.level-2) > .u-nav > .u-nav-item > a.u-nav-link.u-text-hover-custom-color-1:hover,
-        :not(.level-2) > .u-nav > .u-nav-item > a.u-nav-link.u-nav-link.u-text-active-custom-color-1.active,
-        .u-popupmenu-items.u-text-hover-custom-color-1 .u-nav-link:hover,
-        .u-popupmenu-items.u-popupmenu-items.u-text-active-custom-color-1 .u-nav-link.active
-        {
-            color: #b9ef39 !important;
-        }
-
-        .u-text-custom-color-1 svg,
-        .u-text-hover-custom-color-1:hover svg,
-        .u-button-style:hover > .u-text-hover-custom-color-1 svg,
-        .u-button-style.u-button-style.active > .u-text-active-custom-color-1 svg,
-        .u-text-hover-custom-color-1:focus svg
-        {
-            fill: #b9ef39;
-        }
-
-        .u-link.u-text-custom-color-1:hover
-        {
-            color: #afed1e !important;
-        }
-
-        a.u-link.u-text-hover-custom-color-1:hover
-        {
-            color: #b9ef39 !important;
-        }
 
         
 
@@ -34247,70 +34079,49 @@ a.u-link.u-text-hover-grey-90:hover {
 
 /*end-variables sitestylecss*/
 .u-header {
-  background-image: linear-gradient(#f1c50e, #e68387);
+  background-image: linear-gradient(#f1c50e, #db545a);
 }
 
 .u-header .u-sheet-1 {
-  min-height: 120px;
+  min-height: 130px;
 }
 
 .u-header .u-image-1 {
-  width: 209px;
-  height: 94px;
-  margin: 13px auto 0 -16px;
+  width: 140px;
+  height: 80px;
+  margin: 25px auto 0 -17px;
+}
+
+.u-header .u-logo-image-1 {
+  width: 100%;
+  height: 100%;
 }
 
 .u-header .u-menu-1 {
-  margin: -65px 0 42px auto;
+  margin: -60px -12px 53px auto;
 }
 
 .u-header .u-nav-1 {
   font-size: 1rem;
   letter-spacing: 0px;
+  text-transform: uppercase;
+  font-weight: 500;
 }
 
 .u-header .u-nav-2 {
   font-size: 1.25rem;
 }
 @media (max-width: 1199px) {
-  .u-header .u-sheet-1 {
-    min-height: 163px;
-  }
-
   .u-header .u-image-1 {
-    width: 209px;
-    height: 94px;
-    margin-top: 35px;
-    margin-left: -11px;
+    margin-left: -17px;
   }
 
   .u-header .u-menu-1 {
     width: auto;
-    margin-top: -65px;
-    margin-right: 35px;
-    margin-bottom: 60px;
   }
 }
-@media (max-width: 991px) {
-  .u-header .u-sheet-1 {
-    min-height: 232px;
-  }
 
-  .u-header .u-image-1 {
-    margin-top: 69px;
-    margin-left: -26px;
-  }
 
-  .u-header .u-menu-1 {
-    margin-top: -63px;
-    margin-right: 20px;
-  }
-}
-@media (max-width: 767px) {
-  .u-header {
-    min-height: 232px;
-  }
-}
 
 .u-footer {
   background-image: none;
